--- a/Build_a_survey_form/project/index.html
+++ b/Build_a_survey_form/project/index.html
@@ -11,24 +11,28 @@
  <div>
     <header></header>
     <form action="">
-        <div class="form_divs">
-            <label id="username_label">Username</label>
-            <input type="text" name="username" class="basic_form" placeholder="Enter your username">
+        <div class="form-divs">
+            <label id="username-label">Username</label>
+            <input type="text" name="username" class="basic-form" placeholder="Enter your username">
         </div>
-    <div class="form_divs">
-        <label></label>
+    <div class="form-divs">
+        <label>Email</label>
+        <input>
+        <div class="form-divs">
+            <label id="age-label">Age</label>
+            <input type="number" name="age" id ="number" class="basic-form" placeholder="Enter your age" min="10" max="102">
+        </div>
+    </div>
+    <div class="form-divs">
+        <label>How often do you play *****?</label>
         <input>
     </div>
-    <div class="form_divs">
-        <label></label>
+    <div class="form-divs">
+        <label>Which one of our latest events did u enjoy the most?</label>
         <input>
     </div>
-    <div class="form_divs">
-        <label></label>
-        <input>
-    </div>
-    <div class="form_divs">
-        <label></label>
+    <div class="form-divs">
+        <label>Which fate are you supporting?</label>
         <input>
     </div>
     
