--- a/Build_a_survey_form/project/index.html
+++ b/Build_a_survey_form/project/index.html
@@ -12,19 +12,19 @@
     <header></header>
     <form action="">
         <div class="form-divs">
-            <label id="username-label">Username</label>
+            <label id="username-label">Username<br/></label>
             <input type="text" name="username" class="basic-form" placeholder="Enter your username">
         </div>
     <div class="form-divs">
-        <label>Email</label>
+        <label>Email<br/></label>
         <input type="email" name="email" class="basic-form">
         <div class="form-divs">
-            <label id="age-label">Age</label>
+            <label id="age-label">Age<br/></label>
             <input type="number" name="age" id ="number" class="basic-form" placeholder="Enter your age" min="10" max="102">
         </div>
     </div>
     <div class="form-divs">
-        <p>How long you play The End of Tales every week?</p>
+        <p>How long you play The End of Tales every week?<br/></p>
         <select id="weekly-hours" name="weekly-hours" class="basic-form" required>
             <option disabled selected>
                 Select one
@@ -44,7 +44,7 @@ more than 12h
         </select>
     </div>
     <div class="form-divs">
-        <p>Which one of our latest events did u enjoy the most?</p>
+        <p>Which one of our latest events did u enjoy the most?<br/></p>
         <label>
             <input name="events" value="event 1" type="radio"class="input-radio" checked>Event 1 <br/>
         </label>
@@ -76,6 +76,7 @@ more than 12h
             <input name="factions" value="faction 5" type="checkbox" class="input-checkbox"> Faction 5<br/>
         </label>
         <label>
+        <!--Make the functional check all checkbox-->
             <input type="checkbox" onclic="check(this)" >Check all <br/>
         </label>
     </div>
