--- a/Build_a_survey_form/project/index.html
+++ b/Build_a_survey_form/project/index.html
@@ -12,7 +12,10 @@
 </head>
 <body>
  <div>
-    <header></header>
+    <header>
+    <h1 id="title">End of T</h1>
+<p>Thanks for completing our survey</p>
+    </header>
     <form action="">
         <div class="form-divs">
             <label id="username-label">Username<br/></label>
