--- a/Build_a_survey_form/project/index.html
+++ b/Build_a_survey_form/project/index.html
@@ -18,14 +18,14 @@
     </header>
     <form id="survey-form"action="">
         <div class="form-divs">
-            <label id="name-label">Username<br/></label>
+            <label for="name" id="name-label">Username<br/></label>
             <input required id="name" type="text" name="username" class="basic-form" placeholder="Enter your username">
         </div>
     <div class="form-divs">
-        <label id="email-label">Email<br/></label>
+        <label for="email" id="email-label">Email<br/></label>
         <input required id="email" type="email" name="email" class="basic-form" placeholder="Enter your email">
         <div class="form-divs">
-            <label id="number-label">Age<br/></label>
+            <label for="number" id="number-label">Age<br/></label>
             <input type="number" name="age" id ="number" class="basic-form" placeholder="Enter your age" min="10" max="102">
         </div>
     </div>
@@ -51,39 +51,39 @@ more than 12h
     </div>
     <div class="form-divs">
         <p>Which one of our latest events did u enjoy the most?<br/></p>
-        <label>
-            <input name="events" value="event 1" type="radio"class="input-radio" checked>Event 1 <br/>
+        <label for="event 1">
+            <input id="event 1" name="events" value="event 1" type="radio"class="input-radio" checked>Event 1 <br/>
         </label>
-        <label>
-            <input name="events" value="event 2" type="radio" class="input-radio" > Event 2 <br/>
+        <label for="event 2">
+            <input id="event 2" name="events" value="event 2" type="radio" class="input-radio" > Event 2 <br/>
         </label>
-        <label>
-            <input name="events" value="event 3" type="radio" class="input-radio" > Event 3 <br/>
+        <label for="event 3">
+            <input id="event 3" name="events" value="event 3" type="radio" class="input-radio" > Event 3 <br/>
         </label>
-        <label>
-            <input name="events" value="none" type="radio" class="input-radio" > None of them <br/>
+        <label for="none">
+            <input id="none" name="events" value="none" type="radio" class="input-radio" > None of them <br/>
         </label>
     </div>
     <div class="form-divs">
         <p>Which faction feels overpowered? <span>(Check all that apply)</span></p>
-        <label>
-            <input name="factions" value="faction 1" type="checkbox" class="input-checkbox"> Faction 1<br/>
+        <label for="facion 1">
+            <input id="faction 1" name="factions" value="faction 1" type="checkbox" class="input-checkbox"> Faction 1<br/>
         </label>
-        <label>
-            <input name="factions" value="faction 2" type="checkbox" class="input-checkbox"> Faction 2<br/>
+        <label for="faction 2">
+            <input id="faction 2" name="factions" value="faction 2" type="checkbox" class="input-checkbox"> Faction 2<br/>
         </label>
-        <label>
-            <input name="factions" value="faction 3" type="checkbox" class="input-checkbox"> Faction 3<br/>
+        <label for="faction 3">
+            <input id="faction 3" name="factions" value="faction 3" type="checkbox" class="input-checkbox"> Faction 3<br/>
         </label>
-        <label>
-            <input name="factions" value="faction 4" type="checkbox" class="input-checkbox"> Faction 4<br/>
+        <label for="faction 4">
+            <input id="faction 4" name="factions" value="faction 4" type="checkbox" class="input-checkbox"> Faction 4<br/>
         </label>
-        <label>
-            <input name="factions" value="faction 5" type="checkbox" class="input-checkbox"> Faction 5<br/>
+        <label for="faction 5">
+            <input id="faction 5" name="factions" value="faction 5" type="checkbox" class="input-checkbox"> Faction 5<br/>
         </label>
         <label>
         <!--Make the functional check all checkbox-->
-            <input type="checkbox" onclic="check(this)" >Check all <br/>
+            <input value="check all" type="checkbox" onclic="check(this)" >Check all <br/>
         </label>
     </div>
     <div class="form-divs">
